# airbyte-csv-connector

airbyte-integrations/connectors/destination-hdfs/: messages.jsonl
airbyte-integrations/connectors/destination-hdfs/destination_hdfs/: client.py  destination.py
airbyte-integrations/connectors/destination-orange-hdfs/: README.md  main.py  messages.jsonl  metadata.yaml  setup.py
airbyte-integrations/connectors/destination-orange-hdfs/destination_orange_hdfs/: __init__.py  client.py  client_async.py  destination.py  spec.json
airbyte-integrations/connectors/destination-sftp-csv/: README.md  main.py  messages.jsonl  metadata.yaml  setup.py
airbyte-integrations/connectors/destination-sftp-csv/destination_sftp_csv/: __init__.py  client.py  destination.py  spec.json
airbyte-integrations/connectors/source-hdfs/: Dockerfile  pyproject.toml
airbyte-integrations/connectors/source-hdfs/source_hdfs/: client.py  source.py
airbyte-integrations/connectors/source-hdfs/src/source_hdfs/: client.py  source.py  spec.yaml
airbyte-integrations/connectors/source-orange-files/: README.md  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml  setup.py
airbyte-integrations/connectors/source-orange-files/sample_files/: configured_catalog.json
airbyte-integrations/connectors/source-orange-files/source_orange_files/: __init__.py  client.py  run.py  source.py  spec.yaml
docs/integrations/destinations/: sftp-csv.md
